--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Local stuff
+.Trash-1000
+.Trashes
+.fseventsd/
+.metadata_never_index
+boot_out.txt
+.vscode/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
